Fix filter text off bottom with no scroll on mobile

--- a/services/nginx/ui/src/components/Components/Filter/Filter.module.scss
+++ b/services/nginx/ui/src/components/Components/Filter/Filter.module.scss
@@ -53,9 +53,15 @@
     }
 
     .content {
-        height: calc(100vh - #{$menu-height});
+        height: calc(100vh - #{$menu-height} - calc(100vh - 100%));
         width: 100%;
         padding-right: $button-padding;
         overflow: auto;
+
+        &:after {
+            content: "";
+            display: block;
+            margin-bottom: 10px;
+        }
     }
 }
